# mandelbrot_scout

./: Cargo.toml  README.md
docs/: palette_editor.md
examples/: bench_fixedreal.rs
settings/: settings.toml
src/: controls.rs  export.rs  gpu_pipeline.rs  main.rs  mandelbrot.wgsl  numerics.rs  palette_editor.rs  palette_generators.rs  palette_window.rs  reduce_feedback.wgsl  scene.rs  scout_engine.rs  settings.rs  signals.rs
src/gpu_pipeline/: builder.rs  clear_feedback.wgsl  color.wgsl  display.wgsl  histogram.wgsl  mandelbrot.wgsl  mandelbrot_burningship.wgsl  mandelbrot_df.wgsl  mandelbrot_f32.wgsl  mandelbrot_fexp.wgsl  mandelbrot_stateful.wgsl  reduce_feedback.wgsl  structs.rs
src/scene/: import.rs  policy.rs
src/scout_engine/: bla.rs  formula.rs  newton.rs  orbit.rs  tasks.rs  tile.rs  utils.rs  worker.rs
tests/: wgsl_validate.rs
