[package]
name = "mandelbrot"
version = "0.2.1"
authors = ["grubertw <grubertw@gmail.com>"]
edition = "2024"

[dependencies]
iced_wgpu="0.13.5"
iced_winit="0.13.0"
iced_widget="0.13.4"
futures="0.3.31"
parking_lot = {version = "0.12", features = ["hardware-lock-elision"]}
bytemuck="1.24.0"
rug="1.28.0"
log="0.4.28"
env_logger="0.11.8"
anstyle="1.0.6"
chrono = { version = "0.4", features = ["clock"] }
bitmask="0.5.0"
rand="0.8"
rand_chacha="0.3"