[package]
name = "mandelbrot"
version = "0.2.1"
authors = ["grubertw <grubertw@gmail.com>"]
edition = "2024"

[dependencies]
iced_wgpu="0.14.0"
iced_winit="0.14.0"
iced_widget="0.14.2"
futures = { version = "0.3.32", features = ["thread-pool"] }
parking_lot = {version = "0.12", features = ["hardware-lock-elision"]}
bytemuck="1.25.0"
rug="1.28.1"
log="0.4.29"
env_logger="0.11.8"
anstyle="1.0.6"
chrono = { version = "0.4", features = ["clock"] }