[package]
name = "mandelbrot_scout"
version = "0.3.2"
authors = ["grubertw <grubertw@gmail.com>"]
repository = "https://github.com/grubertw/mandelbrot_scout.git"
edition = "2024"
build = "build.rs"

[build-dependencies]
built = "0.8.0"

[dependencies]
iced_wgpu="0.14.0"
iced_winit="0.14.0"
iced_widget="0.14.2"
wgpu="29.0.0"
futures = { version = "0.3.32", features = ["thread-pool"] }
parking_lot = {version = "0.12", features = ["hardware-lock-elision"]}
bytemuck="1.25.0"
num-complex = { version = "0.4.6" , features = ["bytemuck"]}
rug="1.28.1"
log="0.4.29"
env_logger="0.11.8"
anstyle="1.0.6"
chrono = { version = "0.4", features = ["clock"] }
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
image = { version = "0.25.10", features = ["jpeg"] }
png = "0.18.1"
serde_json = "1.0.149"
rfd = "0.17.2"